--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -1,1 +1,34 @@
-<p>This is the home view.</p>
+<div layout="row">
+	<div flex>
+		<h3>Trending</h3>
+		<ul class="plugin-list">
+			<li ng-repeat="plugin in trending"><span class="name">{{plugin.name}}</span><span class="downloaded">{{plugin.downloaded}}</span></li>
+		</ul>
+	</div>
+	<div flex>
+		<h3>New</h3>
+	</div>
+	<div flex>
+		<h3>Popular</h3>
+		<ul class="plugin-list">
+			<li ng-repeat="plugin in popular"><span class="name">{{plugin.name}}</span><span class="downloaded">{{plugin.downloaded}}</span></li>
+		</ul>
+	</div>
+</div>
+<div layout="row">
+	<div flex>
+		<h3>Updated</h3>
+		<ul class="plugin-list">
+			<li ng-repeat="plugin in updated"><span class="name">{{plugin.name}}</span><span class="downloaded">{{plugin.downloaded}}</span></li>
+		</ul>
+	</div>
+	<div flex>
+		<h3>Tags</h3>
+	</div>
+	<div flex>
+		<h3>Authors</h3>
+		<ul class="author-list">
+			<li ng-repeat="author in authors"><span class="name">{{author.author}}</span><span class="plugins">{{author.plugin_count}}</span></li>
+		</ul>
+	</div>
+</div>
