--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -1,17 +1,27 @@
-.sitename {
-	display: block;
-	width: 100px;
-	height: 50px;
-	text-indent: -9999px;
-	background-image: url(../images/logo-small.png);
+ul li {
+	list-style-type: none;
 }
 
-.wrapper {
-	width: 80%
+.header {	
+	.sitename {
+		display: block;
+		width: 100px;
+		height: 50px;
+		text-indent: -9999px;
+		background-image: url(../images/logo-small.png);
+	}
+
+	h2 {
+    	line-height: 60px;
+	}
+	.searchbox {
+    	padding: 20px 0 0 0;
+	}
 }
-.aside-menu {
-	width: 20%;
-}
-.wrapper, .aside-menu {
-	float: left;
+
+.footer {
+	height: 50px;
+	background-color: #7a7a7a;
+	color: #fff;
+	line-height: 50px;
 }
