using md-list to display plugin lists on home

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -16,6 +16,12 @@ ul li
 	.searchbox
 		padding: 20px 0 0 0
 
+.plugin-list
+	md-list-item .md-list-item-text
+		h3, h4
+			margin: 0
+
+
 .footer
 	height: 50px
 	background-color: #7a7a7a
