--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -17,9 +17,18 @@ ul li
 		padding: 20px 0 0 0
 
 .plugin-list
+	.md-subheader
+		text-align: center
 	md-list-item .md-list-item-text
+		width: 100%
+		.md-button
+			display: block
+			width: 80%
+			margin: 0 auto
 		h3, h4
 			margin: 0
+		h4
+			font-size: 0.8em
 
 
 .footer
