--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -4,8 +4,10 @@
 			<md-subheader>Trending</md-subheader>
 			<md-list-item ng-repeat="plugin in trending">
 				<div class="md-list-item-text">
-					<h3>{{plugin.name}}</h3>
-					<h4>Downloaded {{plugin.downloaded}} times</h4>
+					<md-button class="md-primary md-hue-1">
+						<h3>{{plugin.name}}</h3>
+						<h4>Downloaded {{plugin.downloaded}} times</h4>
+					</md-button>
 				</div>
 			</md-list-item>
 		</md-list>
@@ -20,8 +22,10 @@
 			<md-subheader>Popular</md-subheader>
 			<md-list-item ng-repeat="plugin in popular">
 				<div class="md-list-item-text">
-					<h3>{{plugin.name}}</h3>
-					<h4>Downloaded {{plugin.downloaded}} times</h4>
+					<md-button class="md-primary md-hue-1">
+						<h3>{{plugin.name}}</h3>
+						<h4>Downloaded {{plugin.downloaded}} times</h4>
+					</md-button>
 				</div>
 			</md-list-item>
 		</md-list>
@@ -33,8 +37,10 @@
 			<md-subheader>Updated</md-subheader>
 			<md-list-item ng-repeat="plugin in updated">
 				<div class="md-list-item-text">
-					<h3>{{plugin.name}}</h3>
-					<h4>Updated 2 days ago</h4>
+					<md-button class="md-primary md-hue-1">
+						<h3>{{plugin.name}}</h3>
+						<h4>Updated 2 days ago</h4>
+					</md-button>
 				</div>
 			</md-list-item>
 		</md-list>
@@ -49,8 +55,10 @@
 			<md-subheader>Authors</md-subheader>
 			<md-list-item ng-repeat="author in authors">
 				<div class="md-list-item-text">
-					<h3>{{author.author}}</h3>
-					<h4>Contributed to {{author.plugin_count}} plugins</h4>
+					<md-button class="md-primary md-hue-1">
+						<h3>{{author.author}}</h3>
+						<h4>Contributed to {{author.plugin_count}} plugins</h4>
+					</md-button>
 				</div>
 			</md-list-item>
 		</md-list>
