main.sass : convert tabs to space, set link color

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -1,38 +1,42 @@
 body
-	font-family: 'Roboto'
+    font-family: 'Roboto'
+
+a
+    color: #3f51b5
+    text-decoration: none
 
 ul li
-	list-style-type: none
+    list-style-type: none
 
 .header
-	.sitename
-		display: block
-		width: 100px
-		height: 50px
-		text-indent: -9999px
-		background-image: url(../images/logo-small.png)
-	h2
-		line-height: 60px
-	.searchbox
-		padding: 20px 0 0 0
+    .sitename
+        display: block
+        width: 100px
+        height: 50px
+        text-indent: -9999px
+        background-image: url(../images/logo-small.png)
+    h2
+        line-height: 60px
+    .searchbox
+        padding: 20px 0 0 0
 
 .plugin-list
-	.md-subheader
-		text-align: center
-	md-list-item .md-list-item-text
-		width: 100%
-		.md-button
-			display: block
-			width: 80%
-			margin: 0 auto
-		h3, h4
-			margin: 0
-		h4
-			font-size: 0.8em
+    .md-subheader
+        text-align: center
+    md-list-item .md-list-item-text
+        width: 100%
+        .md-button
+            display: block
+            width: 80%
+            margin: 0 auto
+        h3, h4
+            margin: 0
+        h4
+            font-size: 0.8em
 
 
 .footer
-	height: 50px
-	background-color: #7a7a7a
-	color: #fff
-	line-height: 50px
+    height: 50px
+    background-color: #7a7a7a
+    color: #fff
+    line-height: 50px
