plugin page: page to display descriptions

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -2,7 +2,7 @@ body
     font-family: 'Roboto'
 
 a
-    color: #3f51b5
+    color: #3f51b5 
     text-decoration: none
 
 ul li
@@ -19,6 +19,9 @@ ul li
         line-height: 60px
     .searchbox
         padding: 20px 0 0 0
+
+.plugin
+    min-height: 500px
 
 .plugin-list
     .md-subheader
