plugin: add characteristics table

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -26,4 +26,30 @@
 			</md-tabs>
 		</md-content>
 	</div>
+	<div layout="row">
+		<md-content flex="50">
+			<table>
+				<tr>
+					<td>Version</td>
+					<td>0.0</td>
+				</tr>
+				<tr>
+					<td>Homepage</td>
+					<td><a href="{{plugin.homepage_url}}">{{plugin.homepage_url}}</a></td>
+				</tr>
+				<tr>
+					<td>Issues</td>
+					<td><a href="{{plugin.issues_url}}">{{plugin.issues_url}}</a></td>
+				</tr>
+				<tr>
+					<td>Added</td>
+					<td>2 years ago</td>
+				</tr>
+				<tr>
+					<td>Updated</td>
+					<td>5 minutes ago</td>
+				</tr>
+			</table>
+		</md-content>
+	</div>
 </div>
