displaying description of plugins in search

--- a/frontend/app/views/search.html
+++ b/frontend/app/views/search.html
@@ -22,7 +22,7 @@
 				</div>
 			</div>
 			<div class="description">
-				
+				<p ng-bind-html="plugin.description | unsafe"></p>
 			</div>
 		</div>
 	</div>
