enhancing markup of search filters

--- a/frontend/app/views/search.html
+++ b/frontend/app/views/search.html
@@ -1,8 +1,10 @@
 <div layout="column">
 	<div class="sort-filters">
-		<p>Sort by :</p>
-		<a href="" ng-click="sortByRelevance()"></a>
-		<a href="" ng-click="sortByPopularity()"></a>
+		<p>
+		<span>Sort by :</span>
+		<a href="" ng-click="sortByRelevance()">Relevance</a>
+		<a href="" ng-click="sortByPopularity()">Popularity</a>
+		</p>
 	</div>
 
 	<div class="results">
