overflow: visible on plugin description in plugin page

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -27,7 +27,7 @@
 		</md-content>
 	</div>
 	<div layout="row">
-		<md-content flex="50">
+		<md-content class="infos" flex="50">
 			<table>
 				<tr>
 					<td>Version</td>
