--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -10,7 +10,7 @@
 					
 				</rate-box>
 				<div flex="50">
-					<md-button flex="50">Download</md-button>
+					<md-button class="md-primary md-raised" flex="50">Download</md-button>
 				</div>
 			</div>
 		</div>
