--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -39,7 +39,7 @@
 				<div class="md-list-item-text">
 					<md-button ui-sref="plugin({id: plugin.id})" class="md-primary md-hue-1">
 						<h3>{{plugin.name}}</h3>
-						<h4>Updated 2 days ago</h4>
+						<md-chip>Updated 2 days ago</md-chip>
 					</md-button>
 				</div>
 			</md-list-item>
