--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -2,7 +2,7 @@
 	<div layout="row">
 		<div flex="50">			
 			<h2>{{plugin.name}}</h2>
-			<h3>by {{inlineAuthors(plugin.authors)}}</h3>
+			<h4>by {{inlineAuthors(plugin.authors)}}</h4>
 		</div>
 		<div flex="50">
 			<div layout="row">				
@@ -16,11 +16,11 @@
 		</div>
 	</div>
 	<div layout="row">
-		<md-content class="md-padding">
+		<md-content class='tabs'>
 			<md-tabs md-dynamic-height>
 				<md-tab ng-repeat="description in plugin.descriptions" label="{{description.lang}}">
-					<md-content class="md-padding">
-						<h2 ng-bind-html="description.description | unsafe"></h2>
+					<md-content class="md-padding description">
+						<p ng-bind-html="description.description | unsafe"></p>
 					</md-content>
 				</md-tab>
 			</md-tabs>
@@ -28,28 +28,28 @@
 	</div>
 	<div layout="row">
 		<md-content class="infos" flex="50">
-			<table>
-				<tr>
-					<td>Version</td>
-					<td>0.0</td>
-				</tr>
-				<tr>
-					<td>Homepage</td>
-					<td><a href="{{plugin.homepage_url}}">{{plugin.homepage_url}}</a></td>
-				</tr>
-				<tr>
-					<td>Issues</td>
-					<td><a href="{{plugin.issues_url}}">{{plugin.issues_url}}</a></td>
-				</tr>
-				<tr>
-					<td>Added</td>
-					<td>2 years ago</td>
-				</tr>
-				<tr>
-					<td>Updated</td>
-					<td>5 minutes ago</td>
-				</tr>
-			</table>
+			<ul>
+            <li>
+					<label>Version</label>
+				   <span>0.0</span
+				</li>
+            <li>
+					<label>Homepage</label>
+				   <span><a href="{{plugispanomepage_url}}">{{plugin.homepage_url}}</a></td>
+				</li>
+            <li>
+					<label>Issues</label>
+				   <span><a href="{{pluspan.issues_url}}">{{plugin.issues_url}}</a></td>
+				</li>
+            <li>
+					<label>Added</label>
+				   <span>2 years ago</span
+				</li>
+            <li>
+					<label>Updated</label>
+				   <span>5 minutes ago</span
+				</li>
+			</ul>
 		</md-content>
 	</div>
 </div>
