--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -29,7 +29,25 @@ ul li
         line-height: 60px
     .searchbox
         padding: 20px 0 0 0
-
+nav
+    padding-top: 50px
+    border-left: 1px solid #eee
+    position: absolute
+    top: 0
+    bottom: 0
+    right: 0
+    font-size: 16px
+    a
+        color: #555
+        display: block
+        line-height: 1.6
+        padding: 5px 15px
+        margin: 0
+        border-left: 2px solid transparent
+    a.active
+        background-color: #F5F7F8
+        border-left-color: #6F92BA
+        color: #000
 .plugin
     min-height: 500px
     h2 
