--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -1,5 +1,7 @@
 body
     font-family: 'Roboto'
+    font-size: 15px
+    line-height: 1.5
 
 .main
     margin-left: 15px
@@ -12,7 +14,6 @@ h2
     margin-bottom: 2px
 h4
     margin: 0
-    font-size: 0.8em
     color: #949494 
 
 ul li
@@ -76,19 +77,23 @@ nav
         
 
 .plugin-list
-    .md-subheader
-        text-align: center
-    md-list-item .md-list-item-text
-        width: 100%
+    .topic
+        font-size: 2em
+    md-list-item 
+        min-height: inherit
         .md-button
             display: block
-            width: 80%
             margin: 0 auto
+            line-height: 25px
+            min-height: inherit
+            text-transform: capitalize
+            margin: inherit
         h3, h4
             margin: 0
             text-align: left
         h4
-            font-size: 0.8em
+            font-weight: normal
+            color: #6F92BA
 
 .footer
     height: 50px
