--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -2,9 +2,12 @@ body
     font-family: 'Roboto'
     font-size: 15px
     line-height: 1.5
+    background-color: #7a7a7a
 
 .main
-    margin-left: 15px
+    padding-left: 15px
+    background-color: #FFF
+    min-height: 250px
 
 a
     color: #3f51b5 
