use md-fab for download

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -10,7 +10,10 @@
 					
 				</rate-box>
 				<div flex="50">
-					<md-button class="md-primary md-raised" flex="50">Download</md-button>
+					<md-button class="md-fab md-primary md-raised" flex="50">
+                  <i class="fa fa-download"></i>
+                  <md-tooltip>Download</md-tooltip>
+               </md-button>
 				</div>
 			</div>
 		</div>
