more style for index

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -80,9 +80,19 @@ nav
         
 
 .plugin-list
+    margin-bottom: 20px
     .topic
         font-size: 2em
+        .md-subheader-inner 
+            padding: 0
+        i 
+            font-size: 0.7em
+    .legend
+        font-size: 0.8em
+        font-style: italic
+        color: #AFAFAF
     md-list-item 
+        margin-top: 5px
         min-height: inherit
         .md-button
             display: block
