--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -1,7 +1,11 @@
 <div layout="row" layout-sm="column">
    <md-content flex>
       <md-list class="plugin-list">
-         <md-subheader class='topic'>Trending</md-subheader>
+         <md-subheader class='topic'>
+            Trending
+            <i class="fa fa-fire"></i>
+         </md-subheader>
+         <span class='legend'>A recent, relative, increase in installs</span>
          <md-list-item ng-repeat="plugin in trending">
             <md-button ui-sref="plugin({id: plugin.id})">
                <h4>{{plugin.name}}</h4>
@@ -12,14 +16,24 @@
          </md-list-item>
       </md-list>
    </md-content>
+
    <md-content flex>
       <md-list class="plugin-list">
-         <md-subheader class='topic'>New</md-subheader>
+         <md-subheader class='topic'>
+            New
+            <i class="fa fa-plus"></i>
+         </md-subheader>
+         <span class='legend'>Just added to catalog</span>
       </md-list>
    </md-content>
+
    <md-content flex>
       <md-list class="plugin-list">
-         <md-subheader class='topic'>Popular</md-subheader>
+         <md-subheader class='topic'>
+            Popular
+            <i class="fa fa-trophy"></i>
+         </md-subheader>
+         <span class='legend'>With the most unique installs</span>
          <md-list-item ng-repeat="plugin in popular">
             <md-button ui-sref="plugin({id: plugin.id, name: plugin.name})">
                <h4>{{plugin.name}}</h4>
@@ -34,7 +48,11 @@
 <div layout="row" layout-sm="column">
    <md-content flex>
       <md-list class="plugin-list">
-         <md-subheader class='topic'>Updated</md-subheader>
+         <md-subheader class='topic'>
+            Updated
+            <i class="fa fa-refresh"></i>
+         </md-subheader>
+         <span class='legend'>When the plugin was last updated</span>
          <md-list-item ng-repeat="plugin in updated">
             <md-button ui-sref="plugin({id: plugin.id})">
                <h4>{{plugin.name}}</h4>
@@ -43,14 +61,24 @@
          </md-list-item>
       </md-list>
    </md-content>
+
    <md-content flex>
       <md-list class="plugin-list">
-         <md-subheader class='topic'>Tags</md-subheader>
+         <md-subheader class='topic'>
+            Tags
+            <i class="fa fa-tags"></i>
+         </md-subheader>
+         <span class='legend'>With the most plugins</span>
       </md-list>
    </md-content>
+
    <md-content flex>
       <md-list class="plugin-list">
-         <md-subheader class='topic'>Authors</md-subheader>
+         <md-subheader class='topic'>
+            Authors
+            <i class="fa fa-user"></i>
+         </md-subheader>
+         <span class='legend'>With the most plugins</span>
          <md-list-item ng-repeat="author in authors">
             <md-button>
                <h4>{{author.author}}</h4>
