better responsive home

--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -1,5 +1,5 @@
-<div layout="row" layout-sm="column">
-   <md-content flex>
+<div layout="row" layout-wrap>
+   <md-content flex="33" flex-md="50" flex-sm="100">
       <md-list class="plugin-list">
          <md-subheader class='topic'>
             Trending
@@ -17,7 +17,7 @@
       </md-list>
    </md-content>
 
-   <md-content flex>
+   <md-content flex="33" flex-md="50" flex-sm="100">
       <md-list class="plugin-list">
          <md-subheader class='topic'>
             New
@@ -27,7 +27,7 @@
       </md-list>
    </md-content>
 
-   <md-content flex>
+   <md-content flex="33" flex-md="50" flex-sm="100">
       <md-list class="plugin-list">
          <md-subheader class='topic'>
             Popular
@@ -44,9 +44,8 @@
          </md-list-item>
       </md-list>
    </md-content>
-</div>
-<div layout="row" layout-sm="column">
-   <md-content flex>
+
+   <md-content flex="33" flex-md="50" flex-sm="100">
       <md-list class="plugin-list">
          <md-subheader class='topic'>
             Updated
@@ -62,7 +61,7 @@
       </md-list>
    </md-content>
 
-   <md-content flex>
+   <md-content flex="33" flex-md="50" flex-sm="100">
       <md-list class="plugin-list">
          <md-subheader class='topic'>
             Tags
@@ -72,7 +71,7 @@
       </md-list>
    </md-content>
 
-   <md-content flex>
+   <md-content flex="33" flex-md="50" flex-sm="100">
       <md-list class="plugin-list">
          <md-subheader class='topic'>
             Authors
