able to display a note

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -6,9 +6,7 @@
 		</div>
 		<div flex="50">
 			<div layout="row">				
-				<rate-box flex="50">
-					
-				</rate-box>
+				<rate-box flex="50" current-note="note"></rate-box>
 				<div flex="50">
 					<md-button class="md-fab md-primary md-raised" flex="50">
                   <i class="fa fa-download"></i>
