--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -2,7 +2,6 @@ body
     font-family: 'Roboto'
     font-size: 15px
     line-height: 1.5
-    background-color: #7a7a7a
 
 .main
     padding-left: 15px
@@ -111,7 +110,11 @@ rate-box
             color: #6F92BA
 
 .footer
+    position: fixed
+    bottom: 0
+    width: 100%
     height: 50px
     background-color: #7a7a7a
     color: #fff
     line-height: 50px
+    box-shadow: inset 0 6px 12px -8px #333
