rateBox directive: finished initialization, displaying note, possible to change note in scope

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -72,6 +72,11 @@ nav
                     text-transform: uppercase
                 label + span 
                     display: table-cell
+
+rate-box
+    i.fa
+        font-size: 30px
+
 .container 
     div[layout=row]
         md-content:nth-child(2)
