--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -22,16 +22,19 @@ ul li
     list-style-type: none
 
 .header
-    .sitename
-        display: block
-        width: 100px
-        height: 50px
-        text-indent: -9999px
-        background-image: url(../images/logo-small.png)
-    h2
-        line-height: 60px
-    .searchbox
-        padding: 20px 0 0 0
+    .logo
+        .sitename
+            display: inline-block
+            width: 100px
+            height: 50px
+            text-indent: -9999px
+            background-image: url(../images/logo-small.png)
+        h2
+            margin: 0
+            display: inline-block
+            vertical-align: bottom
+            color: #ff8a80
+            
 nav
     padding-top: 50px
     border-left: 1px solid #eee
