--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -91,7 +91,8 @@ nav
                     display: table-cell
 rate-box
     i.fa
-        font-size: 30px
+        color: $gp_green
+        font-size: 25px
 
 .container 
     div[layout=row]
