clean search markup

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -27,10 +27,9 @@ a
     color: $gp_blue 
     text-decoration: none
 
-h2 
-    margin-bottom: 2px
-h4
+h2, h4
     margin: 0
+h4
     color: $gp_grey 
 
 ul li
@@ -99,10 +98,11 @@ rate-box
         md-content:nth-child(2)
             background-color: $gp_verylightgrey
 
-.legend
+.legend, .author
     font-size: 0.8em
     font-style: italic
     color: $gp_grey
+    margin: 0
 
 .plugin-list
     margin-bottom: 20px
@@ -128,6 +128,8 @@ rate-box
         h4
             font-weight: normal
             color: $gp_darkblue
+
+
 
 .footer
     position: fixed
