--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -2,7 +2,7 @@
 	<div layout="row">
 		<div flex="50">			
 			<h2>{{plugin.name}}</h2>
-			<h4>by {{inlineAuthors(plugin.authors)}}</h4>
+			<h4 class="author">by {{inlineAuthors(plugin.authors)}}</h4>
 		</div>
 		<div flex="50">
 			<div layout="row">				
