add bg colors and pills

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -13,13 +13,40 @@ $gp_darkblue:      #6F92BA
 $gp_yellow:        #ffff8d
 
 
+.bg_white         
+    background-color: $gp_white
+.bg_black         
+    background-color: $gp_black
+.bg_red           
+    background-color: $gp_red
+.bg_green         
+    background-color: $gp_green
+.bg_verylightgrey 
+    background-color: $gp_verylightgrey
+.bg_lightgrey     
+    background-color: $gp_lightgrey
+.bg_grey          
+    background-color: $gp_grey
+.bg_darkgrey      
+    background-color: $gp_darkgrey
+.bg_dark          
+    background-color: $gp_dark
+.bg_blue          
+    background-color: $gp_blue
+.bg_lightblue     
+    background-color: $gp_lightblue
+.bg_darkblue      
+    background-color: $gp_darkblue
+.bg_yellow        
+    background-color: $gp_yellow
+
 body
     font-family: 'Roboto'
     font-size: 15px
     line-height: 1.5
 
 .main
-    padding-left: 15px
+    padding: 0 0 50px 15px
     background-color: $gp_white
     min-height: 250px
 
@@ -64,6 +91,12 @@ nav
         background-color: $gp_verylightgrey
         border-left-color: $gp_darkblue
         color: $gp_black
+
+.pill 
+    border-radius: 5px
+    padding: 2px 4px
+    cursor: pointer
+
 .plugin
     min-height: 500px
     h2 
