add glpi version on search

--- a/frontend/app/views/search.html
+++ b/frontend/app/views/search.html
@@ -17,8 +17,14 @@
 					<h4 class="author">by Author</h4>
 				</div>
 
-				<rate-box flex>
-				</rate-box>
+            <div class='glpi_versions' flex>
+               <span class='pill bg_green'>0.90</span>
+               <span class='pill bg_green'>0.85</span>
+               <span class='pill bg_green'>0.83</span>
+            </div>
+
+				<rate-box flex></rate-box>
+
 				<span class="downloads" flex>
 					<span class='pill bg_red'>
                   37k
