wip icon, @nzamith : to be completed

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -97,14 +97,25 @@ nav
     padding: 2px 4px
     cursor: pointer
 
+.icon 
+    background-color: $gp_verylightgrey
+    margin-right: 10px
+    padding: 18px // remove this
+
+
 .plugin
+    margin-top: 35px
     min-height: 500px
+
+
     h2 
         text-transform: capitalize
+    .author, .download
+        height: 0
     .tabs
         background-color: inherit
     .description
-        background-color: $gp-lightgrey
+        background-color: $gp-verylightgrey
     .infos
         font-size: 0.8em
         overflow: visible
