--- a/frontend/app/views/search.html
+++ b/frontend/app/views/search.html
@@ -10,6 +10,7 @@
 	<div class="results">
 		<div class="result" ng-repeat="plugin in results track by $index">
 			<div layout="row" layout-wrap>
+            <i class="icon fa fa-2x fa-smile-o"></i>
 				<div flex>
                <h2 class="name">
                   <a ui-sref="plugin({id: plugin.id})">{{plugin.name}}</a>
