screenshots (wip : with placeholder)

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -114,8 +114,18 @@ nav
         height: 0
     .tabs
         background-color: inherit
-    .description
-        background-color: $gp-verylightgrey
+        .description
+            background-color: $gp-verylightgrey
+    .screenshots
+        margin: 40px 0 0 10px
+        .screenshot
+            width: 200px
+            height: 150px
+            margin: 10px
+            display: inline-block
+            text-align: center
+            cursor: pointer
+
     .infos
         font-size: 0.8em
         overflow: visible
