--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -31,8 +31,8 @@
       </span>
 	</div>
 
-	<div layout="row">
-		<md-content class='tabs'>
+	<div layout="row" layout-wrap>
+		<md-content class='tabs' flex flex-sm="100">
 			<md-tabs md-dynamic-height>
 				<md-tab ng-repeat="description in plugin.descriptions" label="{{description.lang}}">
 					<md-content class="md-padding description">
@@ -41,6 +41,14 @@
 				</md-tab>
 			</md-tabs>
 		</md-content>
+
+      <div class='screenshots' flex flex-sm="100">
+         <!-- we need to implemtent a lightbox here -->
+         <md-card class='screenshot'><img src="http://placehold.it/200x150"></md-card>
+         <md-card class='screenshot'><img src="http://placehold.it/200x150"></md-card>
+         <md-card class='screenshot'><img src="http://placehold.it/200x150"></md-card>
+         <md-card class='screenshot'><img src="http://placehold.it/200x150"></md-card>
+      </div>
 	</div>
 	<div layout="row">
 		<md-content class="infos" flex="50">
