--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -98,7 +98,7 @@ nav
     cursor: pointer
 
 .icon 
-    background-color: $gp_verylightgrey
+    background-color: $gp_lightgrey
     margin-right: 10px
     padding: 18px // remove this
 
@@ -183,7 +183,11 @@ rate-box
             font-weight: normal
             color: $gp_darkblue
 
-
+.result
+    margin: 0
+    padding: 10px
+.result:nth-child(even)
+    background-color: $gp_verylightgrey
 
 .footer
     position: fixed
