--- a/frontend/app/views/search.html
+++ b/frontend/app/views/search.html
@@ -10,7 +10,7 @@
 	<div class="results">
 		<div class="result" ng-repeat="plugin in results track by $index">
 			<div layout="row" layout-wrap>
-            <i class="icon fa fa-2x fa-smile-o"></i>
+            <img class="icon" src="http://placehold.it/60x60">
 				<div flex>
                <h2 class="name">
                   <a ui-sref="plugin({id: plugin.id})">{{plugin.name}}</a>
