notebox: you can drag the cursor, and make that move

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -143,6 +143,8 @@ rate-box
     i.fa
         color: $gp_green
         font-size: 25px
+        &.hover
+            color: $gp_lightblue
 
 .container 
     div[layout=row]
