ratebox directive: add attribute to give a callback method, plus another one to disable rating

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -21,7 +21,7 @@
       </div>
 
       
-		<rate-box flex current-note="note"></rate-box>
+		<rate-box flex current-note="plugin.note" already-rated="false" rate-method="ratePlugin"></rate-box>
 
       <span class='download'>
    		<md-button class="md-fab md-primary md-raised">
@@ -43,7 +43,7 @@
 		</md-content>
 
       <div class='screenshots' flex flex-sm="100">
-         <!-- we need to implemtent a lightbox here -->
+         <!-- we need to implement a lightbox here -->
          <md-card class='screenshot'><img src="http://placehold.it/200x150"></md-card>
          <md-card class='screenshot'><img src="http://placehold.it/200x150"></md-card>
          <md-card class='screenshot'><img src="http://placehold.it/200x150"></md-card>
