add space after header

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -63,6 +63,7 @@ ul li
     list-style-type: none
 
 .header
+    margin-bottom: 30px
     .logo
         .sitename
             display: inline-block
